--- a/Picturedom/templates/registration/logout.html
+++ b/Picturedom/templates/registration/logout.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+<form action="" method='post'>
+    <div>
+        {{form}}
+        <p>Are you sure you want to logout <a href="{% url 'logout' %}">Yes</a></p>
+    </div>
+</form>
