--- a/Picturedom/templates/registration/register.html
+++ b/Picturedom/templates/registration/register.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
-</body>
-</html>
+{% load crispy_forms_tags %}
+
+
+{% block main %}
+<form action="" method=POST>
+    {% csrf_token %}
+    {{form|crispy}}
+    <button type="submit" class="btn btn-outline-dark mt-3">Create User</button>
+</form>
+{% endblock %}
