fixed url path for create photo

--- a/Picturedom/templates/components/navbar.html
+++ b/Picturedom/templates/components/navbar.html
@@ -16,7 +16,7 @@
                         Photos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-{#                        <a class="dropdown-item" href="{% url 'create photo' %}">Add Photo</a>#}
+                        <a class="dropdown-item" href="{% url 'create photo' %}">Add Photo</a>
                     </div>
                 </li>
             {% endif %}
