--- a/Picturedom/templates/base.html
+++ b/Picturedom/templates/base.html
@@ -26,8 +26,9 @@
 
     {% endblock %}
 
-
-    <title>Document</title>
+{% block title %}
+    <title>Picturedom</title>
+{% endblock %}
 </head>
 
 <body>
