--- a/Picturedom/templates/photos/comments.html
+++ b/Picturedom/templates/photos/comments.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
+
 {% load crispy_forms_filters %}
 {% load static %}
 
-{% load crispy_forms_tags %}
 
 {% block style %}
 <link rel="stylesheet" href="{% static 'photos/comments.css' %}">
@@ -40,8 +40,8 @@
 
 				{% comment %} checks if the logged user is the one who is the owner of the comment {% endcomment %}
 				{% if request.user == comment.user %}
-{#				<a class='edit' href="{% url 'delete comment' comment.id %}">Delete</a>#}
-{#				<a class='edit' href="{% url 'edit comment' comment.id %}">Edit</a>#}
+				<a class='edit' href="{% url 'delete comment' comment.id %}">Delete</a>
+				<a class='edit' href="{% url 'edit comment' comment.id %}">Edit</a>
 				{% endif %}
 			</div>
 
