--- a/Picturedom/templates/photos/edit_comment.html
+++ b/Picturedom/templates/photos/edit_comment.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block main %}
-<form action="" method=POST>
+<form action="{% url 'edit comment' comment.id %}" method=POST>
     {% csrf_token %}
     {{form|crispy}}
     <button class='btn btn-outline-dark mt-3'>Submit</button>
