--- a/Picturedom/templates/photos/comments.html
+++ b/Picturedom/templates/photos/comments.html
@@ -32,11 +32,11 @@
 				<small style='whitespace:no-wrap;'>{{comment.posted_at|date:"M d h:i a"}} - From
 					{{comment.user}}</small>
 				<p style='margin:0;'>{{comment.content}}</p>
-{#				<a href="{% url 'comment like' comment.id %}" class='pe-1'>#}
-{#					<i class="fas fa-thumbs-up"></a></i>{{comment.commentlike_set.count}}#}
-{##}
-{#				<a href="{% url 'comment dislike' comment.id %}" class='pe-1'>#}
-{#					<i class="fas fa-thumbs-down"></a></i>{{comment.commentdislike_set.count}}#}
+				<a href="{% url 'like comment' comment.id %}" class='pe-1'>
+					<i class="fas fa-thumbs-up"></i></a>{{comment.commentlike_set.count}}
+
+				<a href="{% url 'dislike comment' comment.id %}" class='pe-1'>
+					<i class="fas fa-thumbs-down"></i></a>{{comment.commentdislike_set.count}}
 
 				{% comment %} checks if the logged user is the one who is the owner of the comment {% endcomment %}
 				{% if request.user == comment.user %}
