--- a/Picturedom/templates/components/navbar.html
+++ b/Picturedom/templates/components/navbar.html
@@ -27,7 +27,7 @@
     <div class="d-flex flex-row-reverse bd-highlight">
         <div class="navbar-nav pe-5">
             {% if request.user.is_authenticated %}
-{#                <a class="nav-item nav-link" href="{% url 'profile' %}">Hello, {{ request.user }}</a>#}
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Hello, {{ request.user }}</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Log out</a>
             {% else %}
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
