added less padding from top on the profile card

--- a/Picturedom/static/profile/profile.css
+++ b/Picturedom/static/profile/profile.css
@@ -6,6 +6,11 @@ html body.vsc-initialized div.container div.row.py-5.px-4 div.col-md-5.mx-auto d
 
 }
 
+/* top padding change */
+html body.vsc-initialized div.container div.row.py-5.px-4 {
+    padding-top:1.5rem !important;
+}
+
 /* profile name and stuff text */
 html body.vsc-initialized div.container div.row.py-5.px-4 div.col-md-5.mx-auto div.bg-white.shadow.rounded.overflow-hidden div.px-4.pt-0.pb-4.cover div.media.align-items-end.profile-head div.media-body.mb-5.text-white h4.mt-0.mb-0 {
     position: absolute;
@@ -37,6 +42,5 @@ html body.vsc-initialized div.container div.row.py-5.px-4 div.col-md-5.mx-auto d
 
 /* email change color  */
 html body.vsc-initialized div.container div.row.py-5.px-4 div.col-md-5.mx-auto div.bg-white.shadow.rounded.overflow-hidden div.bg-light.p-4.d-flex.justify-content-end.text-center ul.list-inline.mb-0 li.list-inline-item span.font-weight-bold.mb-0.d-block {
-
     color: #6c757d;
 }
