--- a/Picturedom/templates/photos/create_photo.html
+++ b/Picturedom/templates/photos/create_photo.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block main %}
-    <form action="" method=POST enctype="multipart/form-data">
+    <form action="{% url 'create photo' %}" method=POST enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-outline-success mt-3">Post</button>
