--- a/Picturedom/templates/profile/profile.html
+++ b/Picturedom/templates/profile/profile.html
@@ -35,24 +35,23 @@
                 </div>
                 <div class="bg-light p-4 d-flex justify-content-end text-center">
 
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item">
-                            <span class="font-weight-bold mb-0 d-block">{{ user.profile.email }}</span>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">{{ user_images }}</h5><small class="text-muted">
-                            <i
-                                    class="fas fa-image mr-1"></i>Photos</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">{{ user_comments }}</h5><small class="text-muted">
-                            <i class="fas fa-user mr-1"></i>Comments</small>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="font-weight-bold mb-0 d-block">{{ user_liked }}</h5><small class="text-muted"> <i
-                                class="fas fa-user mr-1"></i>Liked</small>
-                        </li>
-                    </ul>
+                   <ul class="list-inline mb-0">
+                    <li class="list-inline-item">
+                        <span class="font-weight-bold mb-0 d-block">{{user.profile.email}}</span>
+                    </li>
+                    <li class="list-inline-item">
+                        <h5 class="font-weight-bold mb-0 d-block">{{user_images}}</h5><small class="text-muted"> <i
+                                class="fas fa-image me-1"></i>Photos</small>
+                    </li>
+                    <li class="list-inline-item">
+                        <h5 class="font-weight-bold mb-0 d-block">{{user_comments}}</h5><small class="text-muted">
+                            <i class="fas fa-comments me-1"></i>Comments</small>
+                    </li>
+                    <li class="list-inline-item">
+                        <h5 class="font-weight-bold mb-0 d-block">{{user_liked}}</h5><small class="text-muted"> <i
+                                class="fas fa-heart me-1"></i>Liked</small>
+                    </li>
+                </ul>
                 </div>
                 <div class="px-4 py-3">
                 </div>
