--- a/Picturedom/templates/components/navbar.html
+++ b/Picturedom/templates/components/navbar.html
@@ -11,7 +11,8 @@
 
             {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{% url 'homepage photos' %}" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="{% url 'homepage photos' %}" id="navbarDropdown"
+                       role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Photos
                     </a>
@@ -36,4 +37,8 @@
             {% endif %}
         </div>
     </div>
+    {# Dark Mode button #}
+    <a class="nav-item nav-link form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" onclick="darkMode()">
+    </a>
 </nav>
