--- a/Picturedom/templates/photos/create_photo.html
+++ b/Picturedom/templates/photos/create_photo.html
@@ -5,6 +5,6 @@
     <form action="{% url 'create photo' %}" method=POST enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-outline-success mt-3">Post</button>
+        <button type="submit" class="btn btn-outline-dark mt-3">Post</button>
     </form>
 {% endblock %}
