--- a/Picturedom/templates/registration/login.html
+++ b/Picturedom/templates/registration/login.html
@@ -1,21 +1,47 @@
 {% extends 'base.html' %}
 {% load crispy_forms_filters %}
 
+{% load static %}
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'auth/login.css' %}">
+{% endblock %}
 
 
 {% block main %}
 
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-success" role="alert">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}
+{% if messages %}
+{% for message in messages  %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  {{message}}
+  <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true"></span>
+  </button>
+</div>
+{% endfor %}
+{% endif %}
 
-    <form action="" method='post'>
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class='btn btn-outline-dark mt-3'>Login</button>
-    </form>
+<div class="login-box">
+  <h2>Login</h2>
+  <form action="{% url 'login' %}" method='post'>
+    {% csrf_token %}
+    <div class='user-box'>
+      {{form.non_field_errors}}
+    </div>
+    <div class="user-box">
+      <input type="text" name="username" required="">
+      <label>Username</label>
+    </div>
+    <div class="user-box">
+      <input type="password" name="password" required="">
+      <label>Password</label>
+    </div>
+    <button type="submit" class='btn btn-outline-light mt-3'>Sign In
+    </button>
+    <div class='redirect-div'>
+      <p class='redirect mt-2'>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+    </div>
+  </form>
+</div>
+
 {% endblock %}
