--- a/Picturedom/templates/registration/register.html
+++ b/Picturedom/templates/registration/register.html
@@ -1,13 +1,41 @@
 {% extends 'base.html' %}
-{% load crispy_forms_filters %}
-
+{% load static %}
 {% load crispy_forms_tags %}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'auth/register.css' %}">
+{% endblock %}
 
 {% block main %}
-<form action="" method=POST>
-    {% csrf_token %}
-    {{form|crispy}}
-    <button type="submit" class="btn btn-outline-dark mt-3">Create User</button>
-</form>
+
+    <div class="login-box">
+        <h2>Register</h2>
+        <form action="{% url 'register' %}" method='post'>
+            {% csrf_token %}
+            <div class='user-box'>
+                {% if form.errors %}
+                    {{ form.username.errors }}
+                    {{ form.password2.errors }}
+                {% endif %}
+
+            </div>
+            <div class="user-box">
+                <input type="text" name="username" required="">
+                <label>Username</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="password1" required="">
+                <label>Password</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="password2" required="">
+                <label>Confirm Password</label>
+            </div>
+            <button type="submit" class='btn btn-outline-light mt-3'>Sign Up
+            </button>
+            <div class='redirect-div'>
+                <p class='redirect mt-2'>Have an account? <a href="{% url 'login' %}">Sign In</a></p>
+            </div>
+        </form>
+    </div>
 {% endblock %}
