added the photo likes to be taken as context variable from the view instead adding logic to the html file

--- a/Picturedom/templates/photos/comments.html
+++ b/Picturedom/templates/photos/comments.html
@@ -37,7 +37,7 @@
                         {% endif %}
                     </a>
                 </div>
-                <span class='show-likes'>{{ photo.photolike_set.count }} likes</span>
+                <span class='show-likes'>{{ likes_count }} likes</span>
             {% endif %}
             <div class="card-body">
                 {% if comments %}
