--- a/Picturedom/templates/registration/register.html
+++ b/Picturedom/templates/registration/register.html
@@ -33,6 +33,7 @@
             </div>
             <button type="submit" class='btn btn-outline-light mt-3'>Sign Up
             </button>
+            <input type="hidden" name="bot_cather" id="id_bot_cather">
             <div class='redirect-div'>
                 <p class='redirect mt-2'>Have an account? <a href="{% url 'login' %}">Sign In</a></p>
             </div>
