--- a/Picturedom/templates/base.html
+++ b/Picturedom/templates/base.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap" rel="stylesheet">
     <link href="{% static 'base.css' %}" rel="stylesheet"/>
+    {# favicon #}
+    <link rel="shortcut icon" href="https://img.icons8.com/windows/32/000000/pinterest-p.png">
+
     {% block style %}
 
     {% endblock %}
@@ -38,7 +41,7 @@
 
     {% endblock %}
 </div>
-
+<a hidden href="https://icons8.com/icon/x-m7muFV2A25/pinterest-p">Pinterest P icon by Icons8</a>
 </body>
 
 
