--- a/Picturedom/templates/profile/profile.html
+++ b/Picturedom/templates/profile/profile.html
@@ -48,7 +48,7 @@
                             <i class="fas fa-comments me-1"></i>Comments</small>
                     </li>
                     <li class="list-inline-item">
-                        <h5 class="font-weight-bold mb-0 d-block">{{user_liked}}</h5><small class="text-muted"> <i
+                        <h5 class="font-weight-bold mb-0 d-block">{{total_likes}}</h5><small class="text-muted"> <i
                                 class="fas fa-heart me-1"></i>Liked</small>
                     </li>
                 </ul>
