--- a/Picturedom/templates/components/paginator.html
+++ b/Picturedom/templates/components/paginator.html
@@ -11,11 +11,11 @@
         {% endif %}
 
         {% for num in page_obj.paginator.page_range %}
-            {% ifequal num page_obj.number %}
+            {% if num == page_obj.number %}
                 <li class="page-item"><a class="page-link" href="#">{{ num }}</a></li>
             {% else %}
                 <li class='page-item'><a class='page-link' href="?page={{ num }}">{{ num }}</a></li>
-            {% endifequal %}
+            {% endif %}
         {% endfor %}
 
         {% if page_obj.has_next %}
